test: 잘못된 테스트 검증 내역 수정